--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,9 +11,15 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/lamp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp" />
+        android:layout_above="@+id/kosong"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:id="@+id/kosong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:layout_width="fill_parent"
@@ -24,6 +30,6 @@
         android:textSize="30sp"
         android:layout_below="@+id/imgLogo"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp" />
+        android:layout_marginTop="30dp" />
 
 </RelativeLayout>
