--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,8 +19,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:fontFamily="sans-serif-medium"
+        android:letterSpacing="0.1"
+        android:textStyle="bold"
         android:text="Light Checker"
-        android:textColor="#454545"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:layout_below="@+id/imgLogo"
         android:layout_alignParentStart="true"
