--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -9,7 +9,7 @@
         android:id="@+id/list_group"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="16dp"
-        android:textColor="@android:color/white"
+        android:textColor="#424242"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
