--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#37474F</color>
-    <color name="colorAccent">#CFD8DC</color>
+    <color name="colorPrimary">#D32F2F</color>
+    <color name="colorPrimaryDark">#E53935</color>
+    <color name="colorAccent">#FFEBEE</color>
 </resources>
