--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#D32F2F</color>
     <color name="colorPrimaryDark">#E53935</color>
     <color name="colorAccent">#FFEBEE</color>
+    <color name="colorDim">#EF5350</color>
+    <color name="colorNormal">#EF9A9A</color>
+    <color name="white">#fff</color>
 </resources>
